# primitivo

./: .gitignore  Anchor.toml  Makefile  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: anchor-test.yml
crates/airdrop-merkle/: Cargo.toml  build.rs
crates/airdrop-merkle/src/: lib.rs
crates/converter/: Cargo.toml
crates/converter/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  ownership.rs
crates/primitivo/: Cargo.toml  build.rs
crates/primitivo/src/: converter.rs  lib.rs  merkle-airdrop.rs  ownership_macros.rs  pausable.rs  pausable_macros.rs  vault.rs  vesting.rs
crates/vault/: Cargo.toml  build.rs
crates/vault/src/: lib.rs
crates/vesting/: Cargo.toml  build.rs
crates/vesting/src/: lib.rs
merkle-tree-generator/: tsconfig.json
merkle-tree-generator/src/: cli.ts  merkle.test.ts  merkle.ts
programs/converter/: Cargo.toml  build.rs
programs/converter/src/: lib.rs
programs/merke-airdrop/: Cargo.toml  build.rs
programs/merke-airdrop/src/: lib.rs
programs/solana_airdrop/: Cargo.toml
programs/solana_airdrop/src/: lib.rs
programs/vault/: Cargo.toml  build.rs
programs/vault/src/: lib.rs
programs/vesting/: Cargo.toml
programs/vesting/src/: lib.rs
scripts/: claim.ts  init-distributor.ts
tests/: converter.ts  solana_airdrop.ts  vault.ts  vesting.ts  vesting_ownership.ts  vesting_pausable.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
utils/merkle-tree-generator/: package.json
utils/merkle-tree-generator/src/: merkle.test.ts
