[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
anchor-lang = "0.32.1"
borsh = "1.5.3"

[dependencies.converter-crate]
package = "primitivo-token-converter"
path = "../crates/converter"

[dependencies.primitivo-macro]
path = "../crates/macro"

[dependencies.trident-fuzz]
version = "0.12.0"

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"

[[bin]]
name = "fuzz_2"
path = "fuzz_2/test_fuzz.rs"
