[package]
name = "primitivo-airdrop-merkle"
version = "0.0.1"
description = "Shared Merkle airdrop logic and account types for Primitivo"
edition = "2021"
license = "MIT"
repository = "https://github.com/primitivo-org/primitivo"
build = "build.rs"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-sha256-hasher = "3.1.0"
primitivo-macro = { path = "../macro" }
