[package]
name = "primitivo-token-converter"
version = "0.0.1"
description = "Shared token converter logic for Primitivo"
edition = "2021"
license = "MIT"
repository = "https://github.com/primitivo-org/primitivo"
build = "build.rs"

[lib]
name = "converter_crate"
path = "src/lib.rs"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
primitivo-macro = { version = "0.0.1", path = "../macro" }
