[package]
name = "primitivo-macro"
version = "0.0.1"
description = "Shared ownership and pausable helpers for Primitivo programs"
edition = "2021"
license = "MIT"
repository = "https://github.com/primitivo-org/primitivo"

[lib]
name = "primitivo_macro"
path = "src/lib.rs"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
