[package]
name = "vesting-crate"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/primitivo-org/primitivo"
build = "build.rs"

[lib]
name = "vesting_crate"
path = "src/lib.rs"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
primitivo-macro = { path = "../macro" }
