[package]
name = "converter"
version = "0.1.0"
description = "primitivo token converter program"
edition = "2021"
license = "MIT"
repository = "https://github.com/primitivo-org/primitivo"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "converter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "converter-crate/idl-build", "primitivo-macro/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
primitivo-macro = { path = "../../crates/macro" }
converter-crate = { path = "../../crates/converter" }
