[package]
name = "vesting"
version = "0.0.1"
description = "primitivo vesting program"
edition = "2021"
license = "MIT"
repository = "https://github.com/primitivo-org/primitivo"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "vesting-crate/idl-build", "primitivo-macro/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
primitivo-macro = { path = "../../crates/macro" }
vesting-crate = { package = "primitivo-vesting-crate", path = "../../crates/vesting" }
